@@ -247,7 +247,7 @@ argument_list|()
 decl_stmt|;
 name|assertEquals
 argument_list|(
-literal|"<b>a</b> "
+literal|"<b>a</b>"
 argument_list|,
 name|sfb
 operator|.
@@ -286,7 +286,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|"[a] "
+literal|"[a]"
 argument_list|,
 name|sfb
 operator|.
@@ -379,7 +379,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|"b b<b>a</b> b<b>a</b> b "
+literal|"b b<b>a</b> b<b>a</b> b"
 argument_list|,
 name|f
 index|[
@@ -516,7 +516,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|"<b>c</b><b>a</b><b>a</b> b b "
+literal|"<b>c</b><b>a</b><b>a</b> b b"
 argument_list|,
 name|f
 index|[
@@ -578,7 +578,7 @@ block|}
 decl_stmt|;
 name|assertEquals
 argument_list|(
-literal|"&lt;h1&gt; [a]&lt;/h1&gt; "
+literal|"&lt;h1&gt; [a]&lt;/h1&gt;"
 argument_list|,
 name|sfb
 operator|.
@@ -755,7 +755,7 @@ argument_list|()
 decl_stmt|;
 name|assertEquals
 argument_list|(
-literal|"a b c<b>d</b> e "
+literal|"a b c<b>d</b> e"
 argument_list|,
 name|sfb
 operator|.
@@ -960,7 +960,7 @@ argument_list|()
 decl_stmt|;
 name|assertEquals
 argument_list|(
-literal|"processing<b>speed</b>, the "
+literal|"processing<b>speed</b>, the"
 argument_list|,
 name|sfb
 operator|.
@@ -1281,7 +1281,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|"abc/<b>defg</b>/hijkl/"
+literal|"abc/<b>defg</b>/hijkl"
 argument_list|,
 name|sfb
 operator|.
@@ -1386,7 +1386,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|" b c//<b>d</b> e/"
+literal|" b c//<b>d</b> e"
 argument_list|,
 name|sfb
 operator|.
